amiParser.output
Terminals unused in grammar

   HOLA
   NUM


State 59 conflicts: 2 shift/reduce
State 80 conflicts: 2 shift/reduce
State 81 conflicts: 2 shift/reduce
State 83 conflicts: 6 shift/reduce
State 84 conflicts: 6 shift/reduce
State 85 conflicts: 6 shift/reduce
State 86 conflicts: 6 shift/reduce
State 87 conflicts: 6 shift/reduce
State 88 conflicts: 6 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: declaraciones $@1 funciones

    3 funciones: funcion funciones
    4          | %empty

    5 declaraciones: tipo lista_var ';' declaraciones
    6              | %empty

    7 tipo: base tipo_arreglo

    8 base: TIPO_ENT

    9 tipo_arreglo: %empty

   10 lista_var: lista_var ',' IDENTIFIER
   11          | IDENTIFIER

   12 funcion: DEF tipo IDENTIFIER '(' argumentos ')' INICIO declaraciones sentencias FIN

   13 argumentos: lista_arg
   14           | SIN

   15 lista_arg: lista_arg ',' arg
   16          | arg

   17 arg: tipo_arg IDENTIFIER

   18 tipo_arg: base param_arr

   19 param_arr: %empty

   20 sentencias: sentencias sentencia
   21           | sentencia

   22 sentencia: SKIP
   23          | LEER IDENTIFIER ';'
   24          | ESCRIBE exp ';'
   25          | IDENTIFIER ASIGNACION exp ';'

   26 $@2: %empty

   27 $@3: %empty

   28 $@4: %empty

   29 sentencia: SI e_bool $@2 ENTONCES sentencia $@3 SINO $@4 sentencia FIN

   30 $@5: %empty

   31 $@6: %empty

   32 sentencia: MIENTRAS $@5 e_bool $@6 HACER sentencia FIN

   33 e_bool: e_bool O e_bool
   34       | e_bool Y e_bool
   35       | NO e_bool
   36       | relacional
   37       | VERDADERO
   38       | FALSO

   39 relacional: exp
   40           | relacional '<' relacional
   41           | relacional '>' relacional
   42           | relacional '=' relacional
   43           | relacional MAYOR_IGUAL relacional
   44           | relacional MENOR_IGUAL relacional
   45           | relacional DIFERENTE relacional

   46 exp: NUMBER
   47    | IDENTIFIER
   48    | exp '+' exp
   49    | exp '-' exp
   50    | exp '*' exp
   51    | exp '/' exp
   52    | exp '%' exp
   53    | '(' exp ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 52
'(' (40) 12 53
')' (41) 12 53
'*' (42) 50
'+' (43) 48
',' (44) 10 15
'-' (45) 49
'/' (47) 51
';' (59) 5 23 24 25
'<' (60) 40
'=' (61) 42
'>' (62) 41
error (256)
SKIP (258) 22
HOLA (259)
TIPO_ENT (260) 8
NUMBER (261) 46
IDENTIFIER (262) 10 11 12 17 23 25 47
SI (263) 29
MIENTRAS (264) 32
DEF (265) 12
INICIO (266) 12
SIN (267) 14
ASIGNACION (268) 25
FIN (269) 12 29 32
ENTONCES (270) 29
SINO (271) 29
ESCRIBE (272) 24
NUM (273)
HACER (274) 32
LEER (275) 23
O (276) 33
Y (277) 34
NO (278) 35
VERDADERO (279) 37
FALSO (280) 38
MAYOR_IGUAL (281) 43
MENOR_IGUAL (282) 44
DIFERENTE (283) 45


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
programa (42)
    on left: 2, on right: 0
$@1 (43)
    on left: 1, on right: 2
funciones (44)
    on left: 3 4, on right: 2 3
declaraciones (45)
    on left: 5 6, on right: 2 5 12
tipo (46)
    on left: 7, on right: 5 12
base (47)
    on left: 8, on right: 7 18
tipo_arreglo (48)
    on left: 9, on right: 7
lista_var (49)
    on left: 10 11, on right: 5 10
funcion (50)
    on left: 12, on right: 3
argumentos (51)
    on left: 13 14, on right: 12
lista_arg (52)
    on left: 15 16, on right: 13 15
arg (53)
    on left: 17, on right: 15 16
tipo_arg (54)
    on left: 18, on right: 17
param_arr (55)
    on left: 19, on right: 18
sentencias (56)
    on left: 20 21, on right: 12 20
sentencia (57)
    on left: 22 23 24 25 29 32, on right: 20 21 29 32
$@2 (58)
    on left: 26, on right: 29
$@3 (59)
    on left: 27, on right: 29
$@4 (60)
    on left: 28, on right: 29
$@5 (61)
    on left: 30, on right: 32
$@6 (62)
    on left: 31, on right: 32
e_bool (63)
    on left: 33 34 35 36 37 38, on right: 29 32 33 34 35
relacional (64)
    on left: 39 40 41 42 43 44 45, on right: 36 40 41 42 43 44 45
exp (65)
    on left: 46 47 48 49 50 51 52 53, on right: 24 25 39 48 49 50 51
    52 53


State 0

    0 $accept: . programa $end

    TIPO_ENT  shift, and go to state 1

    $default  reduce using rule 6 (declaraciones)

    programa       go to state 2
    declaraciones  go to state 3
    tipo           go to state 4
    base           go to state 5


State 1

    8 base: TIPO_ENT .

    $default  reduce using rule 8 (base)


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 6


State 3

    2 programa: declaraciones . $@1 funciones

    $default  reduce using rule 1 ($@1)

    $@1  go to state 7


State 4

    5 declaraciones: tipo . lista_var ';' declaraciones

    IDENTIFIER  shift, and go to state 8

    lista_var  go to state 9


State 5

    7 tipo: base . tipo_arreglo

    $default  reduce using rule 9 (tipo_arreglo)

    tipo_arreglo  go to state 10


State 6

    0 $accept: programa $end .

    $default  accept


State 7

    2 programa: declaraciones $@1 . funciones

    DEF  shift, and go to state 11

    $default  reduce using rule 4 (funciones)

    funciones  go to state 12
    funcion    go to state 13


State 8

   11 lista_var: IDENTIFIER .

    $default  reduce using rule 11 (lista_var)


State 9

    5 declaraciones: tipo lista_var . ';' declaraciones
   10 lista_var: lista_var . ',' IDENTIFIER

    ';'  shift, and go to state 14
    ','  shift, and go to state 15


State 10

    7 tipo: base tipo_arreglo .

    $default  reduce using rule 7 (tipo)


State 11

   12 funcion: DEF . tipo IDENTIFIER '(' argumentos ')' INICIO declaraciones sentencias FIN

    TIPO_ENT  shift, and go to state 1

    tipo  go to state 16
    base  go to state 5


State 12

    2 programa: declaraciones $@1 funciones .

    $default  reduce using rule 2 (programa)


State 13

    3 funciones: funcion . funciones

    DEF  shift, and go to state 11

    $default  reduce using rule 4 (funciones)

    funciones  go to state 17
    funcion    go to state 13


State 14

    5 declaraciones: tipo lista_var ';' . declaraciones

    TIPO_ENT  shift, and go to state 1

    $default  reduce using rule 6 (declaraciones)

    declaraciones  go to state 18
    tipo           go to state 4
    base           go to state 5


State 15

   10 lista_var: lista_var ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 19


State 16

   12 funcion: DEF tipo . IDENTIFIER '(' argumentos ')' INICIO declaraciones sentencias FIN

    IDENTIFIER  shift, and go to state 20


State 17

    3 funciones: funcion funciones .

    $default  reduce using rule 3 (funciones)


State 18

    5 declaraciones: tipo lista_var ';' declaraciones .

    $default  reduce using rule 5 (declaraciones)


State 19

   10 lista_var: lista_var ',' IDENTIFIER .

    $default  reduce using rule 10 (lista_var)


State 20

   12 funcion: DEF tipo IDENTIFIER . '(' argumentos ')' INICIO declaraciones sentencias FIN

    '('  shift, and go to state 21


State 21

   12 funcion: DEF tipo IDENTIFIER '(' . argumentos ')' INICIO declaraciones sentencias FIN

    TIPO_ENT  shift, and go to state 1
    SIN       shift, and go to state 22

    base        go to state 23
    argumentos  go to state 24
    lista_arg   go to state 25
    arg         go to state 26
    tipo_arg    go to state 27


State 22

   14 argumentos: SIN .

    $default  reduce using rule 14 (argumentos)


State 23

   18 tipo_arg: base . param_arr

    $default  reduce using rule 19 (param_arr)

    param_arr  go to state 28


State 24

   12 funcion: DEF tipo IDENTIFIER '(' argumentos . ')' INICIO declaraciones sentencias FIN

    ')'  shift, and go to state 29


State 25

   13 argumentos: lista_arg .
   15 lista_arg: lista_arg . ',' arg

    ','  shift, and go to state 30

    $default  reduce using rule 13 (argumentos)


State 26

   16 lista_arg: arg .

    $default  reduce using rule 16 (lista_arg)


State 27

   17 arg: tipo_arg . IDENTIFIER

    IDENTIFIER  shift, and go to state 31


State 28

   18 tipo_arg: base param_arr .

    $default  reduce using rule 18 (tipo_arg)


State 29

   12 funcion: DEF tipo IDENTIFIER '(' argumentos ')' . INICIO declaraciones sentencias FIN

    INICIO  shift, and go to state 32


State 30

   15 lista_arg: lista_arg ',' . arg

    TIPO_ENT  shift, and go to state 1

    base      go to state 23
    arg       go to state 33
    tipo_arg  go to state 27


State 31

   17 arg: tipo_arg IDENTIFIER .

    $default  reduce using rule 17 (arg)


State 32

   12 funcion: DEF tipo IDENTIFIER '(' argumentos ')' INICIO . declaraciones sentencias FIN

    TIPO_ENT  shift, and go to state 1

    $default  reduce using rule 6 (declaraciones)

    declaraciones  go to state 34
    tipo           go to state 4
    base           go to state 5


State 33

   15 lista_arg: lista_arg ',' arg .

    $default  reduce using rule 15 (lista_arg)


State 34

   12 funcion: DEF tipo IDENTIFIER '(' argumentos ')' INICIO declaraciones . sentencias FIN

    SKIP        shift, and go to state 35
    IDENTIFIER  shift, and go to state 36
    SI          shift, and go to state 37
    MIENTRAS    shift, and go to state 38
    ESCRIBE     shift, and go to state 39
    LEER        shift, and go to state 40

    sentencias  go to state 41
    sentencia   go to state 42


State 35

   22 sentencia: SKIP .

    $default  reduce using rule 22 (sentencia)


State 36

   25 sentencia: IDENTIFIER . ASIGNACION exp ';'

    ASIGNACION  shift, and go to state 43


State 37

   29 sentencia: SI . e_bool $@2 ENTONCES sentencia $@3 SINO $@4 sentencia FIN

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    NO          shift, and go to state 46
    VERDADERO   shift, and go to state 47
    FALSO       shift, and go to state 48
    '('         shift, and go to state 49

    e_bool      go to state 50
    relacional  go to state 51
    exp         go to state 52


State 38

   32 sentencia: MIENTRAS . $@5 e_bool $@6 HACER sentencia FIN

    $default  reduce using rule 30 ($@5)

    $@5  go to state 53


State 39

   24 sentencia: ESCRIBE . exp ';'

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    exp  go to state 54


State 40

   23 sentencia: LEER . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 55


State 41

   12 funcion: DEF tipo IDENTIFIER '(' argumentos ')' INICIO declaraciones sentencias . FIN
   20 sentencias: sentencias . sentencia

    SKIP        shift, and go to state 35
    IDENTIFIER  shift, and go to state 36
    SI          shift, and go to state 37
    MIENTRAS    shift, and go to state 38
    FIN         shift, and go to state 56
    ESCRIBE     shift, and go to state 39
    LEER        shift, and go to state 40

    sentencia  go to state 57


State 42

   21 sentencias: sentencia .

    $default  reduce using rule 21 (sentencias)


State 43

   25 sentencia: IDENTIFIER ASIGNACION . exp ';'

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    exp  go to state 58


State 44

   46 exp: NUMBER .

    $default  reduce using rule 46 (exp)


State 45

   47 exp: IDENTIFIER .

    $default  reduce using rule 47 (exp)


State 46

   35 e_bool: NO . e_bool

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    NO          shift, and go to state 46
    VERDADERO   shift, and go to state 47
    FALSO       shift, and go to state 48
    '('         shift, and go to state 49

    e_bool      go to state 59
    relacional  go to state 51
    exp         go to state 52


State 47

   37 e_bool: VERDADERO .

    $default  reduce using rule 37 (e_bool)


State 48

   38 e_bool: FALSO .

    $default  reduce using rule 38 (e_bool)


State 49

   53 exp: '(' . exp ')'

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    exp  go to state 60


State 50

   29 sentencia: SI e_bool . $@2 ENTONCES sentencia $@3 SINO $@4 sentencia FIN
   33 e_bool: e_bool . O e_bool
   34       | e_bool . Y e_bool

    O  shift, and go to state 61
    Y  shift, and go to state 62

    $default  reduce using rule 26 ($@2)

    $@2  go to state 63


State 51

   36 e_bool: relacional .
   40 relacional: relacional . '<' relacional
   41           | relacional . '>' relacional
   42           | relacional . '=' relacional
   43           | relacional . MAYOR_IGUAL relacional
   44           | relacional . MENOR_IGUAL relacional
   45           | relacional . DIFERENTE relacional

    MAYOR_IGUAL  shift, and go to state 64
    MENOR_IGUAL  shift, and go to state 65
    DIFERENTE    shift, and go to state 66
    '<'          shift, and go to state 67
    '>'          shift, and go to state 68
    '='          shift, and go to state 69

    $default  reduce using rule 36 (e_bool)


State 52

   39 relacional: exp .
   48 exp: exp . '+' exp
   49    | exp . '-' exp
   50    | exp . '*' exp
   51    | exp . '/' exp
   52    | exp . '%' exp

    '-'  shift, and go to state 70
    '+'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '%'  shift, and go to state 74

    $default  reduce using rule 39 (relacional)


State 53

   32 sentencia: MIENTRAS $@5 . e_bool $@6 HACER sentencia FIN

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    NO          shift, and go to state 46
    VERDADERO   shift, and go to state 47
    FALSO       shift, and go to state 48
    '('         shift, and go to state 49

    e_bool      go to state 75
    relacional  go to state 51
    exp         go to state 52


State 54

   24 sentencia: ESCRIBE exp . ';'
   48 exp: exp . '+' exp
   49    | exp . '-' exp
   50    | exp . '*' exp
   51    | exp . '/' exp
   52    | exp . '%' exp

    '-'  shift, and go to state 70
    '+'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '%'  shift, and go to state 74
    ';'  shift, and go to state 76


State 55

   23 sentencia: LEER IDENTIFIER . ';'

    ';'  shift, and go to state 77


State 56

   12 funcion: DEF tipo IDENTIFIER '(' argumentos ')' INICIO declaraciones sentencias FIN .

    $default  reduce using rule 12 (funcion)


State 57

   20 sentencias: sentencias sentencia .

    $default  reduce using rule 20 (sentencias)


State 58

   25 sentencia: IDENTIFIER ASIGNACION exp . ';'
   48 exp: exp . '+' exp
   49    | exp . '-' exp
   50    | exp . '*' exp
   51    | exp . '/' exp
   52    | exp . '%' exp

    '-'  shift, and go to state 70
    '+'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '%'  shift, and go to state 74
    ';'  shift, and go to state 78


State 59

   33 e_bool: e_bool . O e_bool
   34       | e_bool . Y e_bool
   35       | NO e_bool .

    O  shift, and go to state 61
    Y  shift, and go to state 62

    O         [reduce using rule 35 (e_bool)]
    Y         [reduce using rule 35 (e_bool)]
    $default  reduce using rule 35 (e_bool)


State 60

   48 exp: exp . '+' exp
   49    | exp . '-' exp
   50    | exp . '*' exp
   51    | exp . '/' exp
   52    | exp . '%' exp
   53    | '(' exp . ')'

    '-'  shift, and go to state 70
    '+'  shift, and go to state 71
    '*'  shift, and go to state 72
    '/'  shift, and go to state 73
    '%'  shift, and go to state 74
    ')'  shift, and go to state 79


State 61

   33 e_bool: e_bool O . e_bool

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    NO          shift, and go to state 46
    VERDADERO   shift, and go to state 47
    FALSO       shift, and go to state 48
    '('         shift, and go to state 49

    e_bool      go to state 80
    relacional  go to state 51
    exp         go to state 52


State 62

   34 e_bool: e_bool Y . e_bool

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    NO          shift, and go to state 46
    VERDADERO   shift, and go to state 47
    FALSO       shift, and go to state 48
    '('         shift, and go to state 49

    e_bool      go to state 81
    relacional  go to state 51
    exp         go to state 52


State 63

   29 sentencia: SI e_bool $@2 . ENTONCES sentencia $@3 SINO $@4 sentencia FIN

    ENTONCES  shift, and go to state 82


State 64

   43 relacional: relacional MAYOR_IGUAL . relacional

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    relacional  go to state 83
    exp         go to state 52


State 65

   44 relacional: relacional MENOR_IGUAL . relacional

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    relacional  go to state 84
    exp         go to state 52


State 66

   45 relacional: relacional DIFERENTE . relacional

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    relacional  go to state 85
    exp         go to state 52


State 67

   40 relacional: relacional '<' . relacional

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    relacional  go to state 86
    exp         go to state 52


State 68

   41 relacional: relacional '>' . relacional

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    relacional  go to state 87
    exp         go to state 52


State 69

   42 relacional: relacional '=' . relacional

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    relacional  go to state 88
    exp         go to state 52


State 70

   49 exp: exp '-' . exp

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    exp  go to state 89


State 71

   48 exp: exp '+' . exp

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    exp  go to state 90


State 72

   50 exp: exp '*' . exp

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    exp  go to state 91


State 73

   51 exp: exp '/' . exp

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    exp  go to state 92


State 74

   52 exp: exp '%' . exp

    NUMBER      shift, and go to state 44
    IDENTIFIER  shift, and go to state 45
    '('         shift, and go to state 49

    exp  go to state 93


State 75

   32 sentencia: MIENTRAS $@5 e_bool . $@6 HACER sentencia FIN
   33 e_bool: e_bool . O e_bool
   34       | e_bool . Y e_bool

    O  shift, and go to state 61
    Y  shift, and go to state 62

    $default  reduce using rule 31 ($@6)

    $@6  go to state 94


State 76

   24 sentencia: ESCRIBE exp ';' .

    $default  reduce using rule 24 (sentencia)


State 77

   23 sentencia: LEER IDENTIFIER ';' .

    $default  reduce using rule 23 (sentencia)


State 78

   25 sentencia: IDENTIFIER ASIGNACION exp ';' .

    $default  reduce using rule 25 (sentencia)


State 79

   53 exp: '(' exp ')' .

    $default  reduce using rule 53 (exp)


State 80

   33 e_bool: e_bool . O e_bool
   33       | e_bool O e_bool .
   34       | e_bool . Y e_bool

    O  shift, and go to state 61
    Y  shift, and go to state 62

    O         [reduce using rule 33 (e_bool)]
    Y         [reduce using rule 33 (e_bool)]
    $default  reduce using rule 33 (e_bool)


State 81

   33 e_bool: e_bool . O e_bool
   34       | e_bool . Y e_bool
   34       | e_bool Y e_bool .

    O  shift, and go to state 61
    Y  shift, and go to state 62

    O         [reduce using rule 34 (e_bool)]
    Y         [reduce using rule 34 (e_bool)]
    $default  reduce using rule 34 (e_bool)


State 82

   29 sentencia: SI e_bool $@2 ENTONCES . sentencia $@3 SINO $@4 sentencia FIN

    SKIP        shift, and go to state 35
    IDENTIFIER  shift, and go to state 36
    SI          shift, and go to state 37
    MIENTRAS    shift, and go to state 38
    ESCRIBE     shift, and go to state 39
    LEER        shift, and go to state 40

    sentencia  go to state 95


State 83

   40 relacional: relacional . '<' relacional
   41           | relacional . '>' relacional
   42           | relacional . '=' relacional
   43           | relacional . MAYOR_IGUAL relacional
   43           | relacional MAYOR_IGUAL relacional .
   44           | relacional . MENOR_IGUAL relacional
   45           | relacional . DIFERENTE relacional

    MAYOR_IGUAL  shift, and go to state 64
    MENOR_IGUAL  shift, and go to state 65
    DIFERENTE    shift, and go to state 66
    '<'          shift, and go to state 67
    '>'          shift, and go to state 68
    '='          shift, and go to state 69

    MAYOR_IGUAL  [reduce using rule 43 (relacional)]
    MENOR_IGUAL  [reduce using rule 43 (relacional)]
    DIFERENTE    [reduce using rule 43 (relacional)]
    '<'          [reduce using rule 43 (relacional)]
    '>'          [reduce using rule 43 (relacional)]
    '='          [reduce using rule 43 (relacional)]
    $default     reduce using rule 43 (relacional)


State 84

   40 relacional: relacional . '<' relacional
   41           | relacional . '>' relacional
   42           | relacional . '=' relacional
   43           | relacional . MAYOR_IGUAL relacional
   44           | relacional . MENOR_IGUAL relacional
   44           | relacional MENOR_IGUAL relacional .
   45           | relacional . DIFERENTE relacional

    MAYOR_IGUAL  shift, and go to state 64
    MENOR_IGUAL  shift, and go to state 65
    DIFERENTE    shift, and go to state 66
    '<'          shift, and go to state 67
    '>'          shift, and go to state 68
    '='          shift, and go to state 69

    MAYOR_IGUAL  [reduce using rule 44 (relacional)]
    MENOR_IGUAL  [reduce using rule 44 (relacional)]
    DIFERENTE    [reduce using rule 44 (relacional)]
    '<'          [reduce using rule 44 (relacional)]
    '>'          [reduce using rule 44 (relacional)]
    '='          [reduce using rule 44 (relacional)]
    $default     reduce using rule 44 (relacional)


State 85

   40 relacional: relacional . '<' relacional
   41           | relacional . '>' relacional
   42           | relacional . '=' relacional
   43           | relacional . MAYOR_IGUAL relacional
   44           | relacional . MENOR_IGUAL relacional
   45           | relacional . DIFERENTE relacional
   45           | relacional DIFERENTE relacional .

    MAYOR_IGUAL  shift, and go to state 64
    MENOR_IGUAL  shift, and go to state 65
    DIFERENTE    shift, and go to state 66
    '<'          shift, and go to state 67
    '>'          shift, and go to state 68
    '='          shift, and go to state 69

    MAYOR_IGUAL  [reduce using rule 45 (relacional)]
    MENOR_IGUAL  [reduce using rule 45 (relacional)]
    DIFERENTE    [reduce using rule 45 (relacional)]
    '<'          [reduce using rule 45 (relacional)]
    '>'          [reduce using rule 45 (relacional)]
    '='          [reduce using rule 45 (relacional)]
    $default     reduce using rule 45 (relacional)


State 86
